--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,6 +33,18 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+
+          {% if site.linkedin_username %}
+          <li>
+            {% include icon-linkedin.html username=site.linkedin_name %}
+          </li>
+          {% endif %}
+
+          {% if site.instagram_username %}
+          <li>
+            {% include icon-instagram.html username=site.instagram_name %}
+          </li>
+          {% endif %}
         </ul>
       </div>
 
