update: add linkenin and instagram account

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,8 @@
             {% endif %}
             </li>
             {% if site.email %}
-            <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            <li>{{ site.email }}</li>
+            <!-- <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li> -->
             {% endif %}
         </ul>
       </div>
@@ -36,13 +37,13 @@
 
           {% if site.linkedin_username %}
           <li>
-            {% include icon-linkedin.html username=site.linkedin_name %}
+            {% include icon-linkedin.html username=site.linkedin_username %}
           </li>
           {% endif %}
 
           {% if site.instagram_username %}
           <li>
-            {% include icon-instagram.html username=site.instagram_name %}
+            {% include icon-instagram.html username=site.instagram_username %}
           </li>
           {% endif %}
         </ul>
