minifix: icon layout

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -212,7 +212,7 @@ pre {
 .social-media-list {
   .icon {
     padding-right: 5px;
-    padding-top: 5px;
+    // padding-top: 5px;
   }
 
   li + li {
